@startuml

interface PlaceholderResolver {
    Optional<PlaceholderData> resolve(String placeholderName)
}

interface PlaceholderData {

    PlaceholderType getType()

    Stream<PlaceholderResolver> stream();

    long count();

    void transform(Object placeholder);

}

enum PlaceholderType {
    SCALAR,
    SET,
    CUSTOM
}

PlaceholderData *-- PlaceholderType : has

PlaceholderResolver --> PlaceholderData : resolves
PlaceholderData --> PlaceholderResolver

class RefelectiveResolver {
}

PlaceholderResolver <|-- RefelectiveResolver

class ScalarPlaceholerData {
}

class IterablePlaceholderData {

}

class CustomWordPlaceholderDate {

}

PlaceholderData <|-- ScalarPlaceholerData
PlaceholderData <|-- IterablePlaceholderData
PlaceholderData <|-- CustomWordPlaceholderDate

@enduml